test/errors/scope-resolution/mine/function-and-var.chpl
module M {
  proc foo(x: int) { }
  var foo: int;
}
